--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, shrink-to-fit=no">
     <meta name="theme-color" content="#46aef7" />
     <meta name="description" content="Codigo11 - Análise e informações sobre Fundos de Investimento Imobiliário - FII" />
-    <title>Codigo 11</title>
+    <title>Codigo11 - Análise e informações sobre FIIs</title>
     <!--
     =========================================================
     * ArchitectUI FREE ReactJS Dashboard Theme - v1.0.0
