--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta charset="utf-8"/>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, shrink-to-fit=no">
-    <meta name="theme-color" content="#46aef7" />
+    <meta name="theme-color" content="#46AEF7"/>
     <meta name="description" content="Codigo11 - Análise e informações sobre Fundos de Investimento Imobiliário - FII" />
     <title>Codigo11 - Análise e informações sobre FIIs</title>
     <!--
