--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8"/>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, shrink-to-fit=no">
     <meta name="theme-color" content="#46AEF7"/>
     <meta name="description" content="Codigo11 - Análise e informações sobre Fundos de Investimento Imobiliário - FII" />
