moving adsense from body to head

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, shrink-to-fit=no">
     <meta name="theme-color" content="#46AEF7"/>
-    
+    <script data-ad-client="ca-pub-8540652797620487" 
+        async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
+    </script>
     <!--
     =========================================================
     * ArchitectUI FREE ReactJS Dashboard Theme - v1.0.0
