added title and description to index and changed link click in searchtable

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, shrink-to-fit=no">
+    <meta name="description" content="Codigo11 - Análise e informações grátis sobre investimento em Fundos Imobiliários - FII" />
+    <title>Codigo11 - Análise e informações sobre investimento em FIIs</title>
     <meta name="theme-color" content="#46AEF7"/>
     <!--
     =========================================================
